k8s/bedrock/bedrock-NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-bedrock
  namespace: code-analyzer
spec:
  podSelector:
    matchLabels:
      app: bedrock
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: notes-frontend
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: notes-frontend
      ports:
        - protocol: TCP
          port: 80
